# simple-logs-sender

./: README.md  pyproject.toml
simple_logs_sender/: __main__.py  base.py  cfg.py  transport.py
simple_logs_sender/plugins/: __init__.py
simple_logs_sender/plugins/dummy/: __init__.py  main.py
simple_logs_sender/plugins/nginx_to_geolocation/: README.md  __init__.py  main.py  requirements.txt
simple_logs_sender/plugins/nginx_to_postgres/: README.md  __init__.py  local_cfg.py  main.py  requirements.txt
